--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="https://www.univ-brest.fr/digitalAssets/66/66744_list.png">
     <title>Todo List</title>
+    <base href="./">
 </head>
 <body>
     <h1> My Todo List </h1>
