--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
         </section>
     </main>
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" language="JavaScript" src="./js/index.js"></script>
 </body>
 </html>
