--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="https://www.univ-brest.fr/digitalAssets/66/66744_list.png">
     <base href="./">
     <title>Todo List</title>
@@ -30,6 +30,6 @@
         </section>
     </main>
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
