--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
     <main>
         <input type="text" id="task" placeholder="todo task ...">
         <section id="bellow">
+            <label for="input">
             <input type="date" id="date">
+            </label>
             <select id="imp">
                 <option>Choose a importance</option>
                 <option>very high</option>
